[package]
name = "progressive_jackpot"
version = "0.1.0"
description = "Solana Casino Progressive Jackpot with DeFi Rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "progressive_jackpot"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
orao-solana-vrf = "0.4.0"
switchboard-v2 = "0.4.0"
